--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/onboard
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://localhost:${PG_PORT}/${PG_TABLE_NAME}
+    username: ${PG_USERNAME}
+    password: ${PG_PASSWORD}
   liquibase:
     enabled: true
-    drop-first: true
+    drop-first: false
     default-schema: public
 
