--- a/src/main/resources/jooq.properties
+++ b/src/main/resources/jooq.properties
@@ -1,4 +1,4 @@
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/onboard
-db.username=postgres
-db.password=postgres
+db.url=jdbc:postgresql://localhost:${PG_PORT}/${PG_TABLE_NAME}
+db.username=${PG_USERNAME}
+db.password=${PG_PASSWORD}
