--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 driver=org.postgresql.Driver
-url=jdbc:postgresql://127.0.0.1:5432/onboard
-username=postgres
-password=postgres
+url=jdbc:postgresql://localhost:${PG_PORT}/${PG_TABLE_NAME}
+username=${PG_USERNAME}
+password=${PG_PASSWORD}
 log-level=FINE
