--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 driver=org.postgresql.Driver
-url=jdbc:postgresql://localhost:${PG_PORT}/${PG_TABLE_NAME}
-username=${PG_USERNAME}
-password=${PG_PASSWORD}
+url=jdbc:postgresql://localhost:5567/onboard
+username=agata
+password=16jrnz,hz
 log-level=FINE
